changed main and notebook

--- a/Bridge REST/Bridge REST main.ipynb
+++ b/Bridge REST/Bridge REST main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -72,13 +72,13 @@
     "    print(adrielReports)\n",
     "\n",
     "    ## Name all of the reports based on label\n",
-    "    for i in len(adrielReports):\n",
-    "        if 'Full Student List' in adrielReports[i]['label']:\n",
-    "            fullStudent = adrielReports[i]\n",
-    "        elif 'Archived Events' in adrielReports[i]['label']:\n",
-    "            archivedAttendees = adrielReports[i]\n",
-    "        elif 'Non-archived' in adrielReports[i]:\n",
-    "            nonArchivedEvents = adrielReports[i]\n",
+    "    for report, i in enumerate(adrielReports):\n",
+    "        if 'Full Student List' in report['label']:\n",
+    "            fullStudent = report\n",
+    "        elif 'Archived Events' in report['label']:\n",
+    "            archivedAttendees = report\n",
+    "        elif 'Non-archived' in report['label']:\n",
+    "            nonArchivedEvents = report\n",
     "        else:\n",
     "            print(\"Named %n reports\" %(i +1))\n",
     "            break\n",
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -109,19 +109,81 @@
     },
     {
      "ename": "TypeError",
-     "evalue": "'int' object is not iterable",
+     "evalue": "'int' object is not subscriptable",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-58ca95c5b364>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-1-74d712997274>\u001b[0m in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m     63\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     64\u001b[0m     \u001b[0;31m## Name all of the reports based on label\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 65\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0madrielReports\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     66\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;34m'Full Student List'\u001b[0m \u001b[0;32min\u001b[0m \u001b[0madrielReports\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'label'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     67\u001b[0m             \u001b[0mfullStudent\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0madrielReports\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not iterable"
+      "\u001b[0;32m<ipython-input-4-58ca95c5b364>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-3-094932cfd048>\u001b[0m in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m     64\u001b[0m     \u001b[0;31m## Name all of the reports based on label\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     65\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mreport\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0madrielReports\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 66\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0;34m'Full Student List'\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mreport\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'label'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     67\u001b[0m             \u001b[0mfullStudent\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mreport\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     68\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0;34m'Archived Events'\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mreport\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'label'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not subscriptable"
      ]
     }
    ],
    "source": [
     "main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "adrielReports = GetReportList('ADRIEL')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'description': '',\n",
+       "  'id': 'ed00dd19bc35455ee260ea478a77c633',\n",
+       "  'label': 'Non-archived Events - Marriott School Club and Attendees **ADRIEL**',\n",
+       "  'lastRun': '2017-10-24T02:31:10'},\n",
+       " {'description': '',\n",
+       "  'id': 'a041bd505d5e5d143798b79e88d64c00',\n",
+       "  'label': 'Archived Events - Marriott School Club and Attendees **ADRIEL**',\n",
+       "  'lastRun': '2017-10-24T02:30:57'},\n",
+       " {'description': 'List of all current students and their contact info',\n",
+       "  'id': 'e5dcb7ef720881dc8a580753d14d9e84',\n",
+       "  'label': 'Full Student List **ADRIEL**',\n",
+       "  'lastRun': '2017-10-24T02:30:33'}]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "adrielReports"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Non-archived Events - Marriott School Club and Attendees **ADRIEL**\n",
+      "Archived Events - Marriott School Club and Attendees **ADRIEL**\n",
+      "Full Student List **ADRIEL**\n"
+     ]
+    }
+   ],
+   "source": [
+    "for report in adrielReports:\n",
+    "    print(report['label'])"
    ]
   },
   {
